[package]
name = "porygon"
version = "0.1.0"
authors = ["Jiayu Yi <yijiayu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]